--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   </style>
 </head>
 <body>
-  <h2>Elaborado por <strong>Joel Ixcamparij</strong> - Centro de Monitoreo INSIVUMEH</h2>
+  <h2>Generador de Afiches Pronóstico Temperaturas elaborado por <strong>Joel Ixcamparij</strong> - Centro de Monitoreo INSIVUMEH</h2>
   <div id="main">
     <div id="panel">
       <div id="controls">
