--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
       const titulo = document.createElement("h1");
       titulo.className = "titulo";
-      titulo.textContent = "PRONÖSTICO DE TEMPERATURAS MÁXIMAS Y MÍNIMAS";
+      titulo.textContent = "PRONÓSTICO DE TEMPERATURAS MÁXIMAS Y MÍNIMAS";
       contenedorTitulo.appendChild(titulo);
 
       const mostrarFecha = document.getElementById("mostrarFecha").checked;
