--- a/index_v2.html
+++ b/index_v2.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Afiches de Temperatura</title>
+  <title>Generador de afiches de Temperatura elaborado por Joel Ixcamparij </title>
   <style>
     body {
       font-family: sans-serif;
